--- a/APL 3/Ejercicio04/makefile
+++ b/APL 3/Ejercicio04/makefile
@@ -1,15 +1,10 @@
 all: cliente servidor
 
-servidor: servidor.o
-	g++ -o  servidor servidor.o -lpthread
+servidor:
+	g++ Servidor.cpp -o Servidor -lpthread -lrt
 
-servidor.o: servidor.cpp
-	g++ -c servidor.cpp -lpthread
-
-cliente: cliente.o
-	g++ -o cliente cliente.o -lpthread
-	
-cliente.o: cliente.cpp 
-	g++ -c cliente.cpp -lpthread
+cliente: 
+	g++ Cliente.cpp -o Cliente -lpthread -lrt
 clean:
-	rm *.o
+	rm Servidor
+	rm Cliente
