--- a/APL 3/Ejercicio03/makefile
+++ b/APL 3/Ejercicio03/makefile
@@ -1,15 +1,10 @@
-all: servidor cliente
+all: cliente servidor
+servidor:
+	g++ Servidor.cpp -o Servidor -lpthread -lrt
 
-servidor: servidor.o
-	gcc -o servidor servidor.o
+cliente: 
+	g++ Cliente.cpp -o Cliente -lpthread -lrt
 
-servidor.o: servidor.c
-	gcc -c servidor.c
-
-cliente: cliente.o
-	gcc -o cliente cliente.o
-
-cliente.o: cliente.c 
-	gcc -c cliente.c 
 clean:
-	rm *.o
+	rm Servidor
+	rm Cliente
